# CPlusPlus-Developer.-Professional

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  absl.cmake  annotated.html  annotated_dup.js  boost.cmake  bug.html  clang-tidy.cmake  classes.html  cxx_standard.cmake  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  globals.html  globals_func.html  googletest.cmake  hierarchy.html  hierarchy.js  index.html  main_8cpp.html  main_8cpp.js  navtreedata.js  navtreeindex0.js  pages.html  sfinae__ip__address_8hpp.html  sfinae__ip__address_8hpp.js  sfinae__ip__address_8hpp_source.html  structis__container.html  structis__container_3_01T_00_01std_1_1void__t_3_01typename_01T_1_1value__type_00_01decltype_07stb7c58919e1f92239b8fbf877f3940997.html  structis__monotype__tuple.html  structis__monotype__tuple_3_01std_1_1tuple_3_01Args_8_8_8_01_4_01_4.html
.github/workflows/: release.yml
DZ_2/: ip_filter.cpp
HW_1/: CMakeLists.txt  README.md  g_test_version.cpp  googletest.cmake  lib.cpp  lib.h  main.cpp  test_version.cpp
HW_10/: .clangd  CMakeLists.txt  README.md
HW_10/include/: server.h  server.hpp  server_p.hpp
HW_10/lib/: async.cpp  server.cpp
HW_10/src/: main.cpp
HW_10/test/: bulk_server_test.cpp  socket_wrapper.hpp
HW_11/: .clangd  CMakeLists.txt  README.md
HW_11/cmake/: boost.cmake
HW_11/include/: database.h  database.hpp  server.h  server.hpp  server_p.hpp
HW_11/lib/: database.cpp  server.cpp
HW_11/src/: database.cpp  main.cpp  server.cpp
HW_11/test/: join_server_test.cpp
HW_12/: .clangd  CMakeLists.txt  Makefile  README.md  mapper.cpp  mapper_variance.cpp  reducer.cpp  reducer_variance.cpp  run_locally.sh
HW_12/input/: dataset_info.txt
HW_13/: .clangd  CMakeLists.txt  README.md
HW_13/include/: mlp.h  mlp.hpp
HW_13/lib/: mlp.cpp
HW_13/src/: main.cpp
HW_13/test/: mlp_test.cpp
HW_2/: .clangd  CMakeLists.txt  README.md  stdin_pipe.cmake
HW_2/cmake/: stdin_pipe.cmake
HW_2/include/: ip_filter.hpp
HW_2/lib/: ip_filter.cpp
HW_2/src/: ip_filter.cpp  main.cpp
HW_2/test/: ip_filter_test.cpp
HW_3/: .clangd  CMakeLists.txt  README.md
HW_3/acm.timus.ru/1409/: README.md
HW_3/include/: my_allocator.hpp  my_list.hpp
HW_3/src/: main.cpp
HW_3/test/: my_allocator_test.cpp  my_list_test.cpp
HW_4/: CMakeLists.txt  README.md
HW_4/include/: sfinae_ip_address.hpp
HW_4/src/: main.cpp
HW_4/test/: sfinae_ip_address_test.cpp
HW_5/: .clangd  CMakeLists.txt  README.md
HW_5/include/controller/: document_controller.hpp  primitive_controller.hpp
HW_5/include/model/: document.hpp  primitive.hpp
HW_5/include/model/primitives/: circle.hpp  line.hpp  rectangle.hpp
HW_5/include/view/: document_view.hpp  primitive_view.hpp
HW_5/src/: main.cpp
HW_5/src/controller/: document_controller.cpp  primitive_controller.cpp
HW_5/src/model/: document.cpp  primitive.cpp
HW_5/src/model/primitives/: circle.cpp  line.cpp  rectangle.cpp
HW_5/src/view/: document_view.cpp  primitive_view.cpp
HW_6/: .clangd  CMakeLists.txt  README.md
HW_6/include/: matrix.hpp
HW_6/src/: main.cpp
HW_6/test/: matrix_test.cpp
HW_7/: .clangd  CMakeLists.txt  README.md
HW_7/include/: taskmanager.hpp
HW_7/lib/: taskmanager.cpp
HW_7/src/: main.cpp
HW_7/test/: taskmanager_test.cpp
HW_8/: .clangd  CMakeLists.txt  README.md
HW_8/include/: bayan.hpp
HW_8/lib/: bayan.cpp
HW_8/src/: main.cpp
HW_8/test/: bayan_test.cpp
HW_9/: .clangd  CMakeLists.txt  README.md
HW_9/lib/: async.cpp
HW_9/test/: async_test.cpp
Project_work/: .clangd  CMakeLists.txt  README.md
Project_work/include/: queue.hpp
Project_work/test/: queue_performance_test.cpp  queue_test.cpp
cmake/: absl.cmake  boost.cmake  capture.cmake  clang-tidy.cmake  cxx_standard.cmake  fetch_absl.cmake  fetch_boost.cmake  fetch_eigen3.cmake  fetch_googletest.cmake  fetch_gsl.cmake  gcc_warnings.cmake  googletest.cmake  socket_wrapper.cmake  warning_flags.cmake
common/: absl.cmake  boost_algorithm.cmake  boost_asio.cmake  boost_crc.cmake  boost_filesystem.cmake  boost_program_options.cmake  boost_test.cmake  boost_uuid.cmake  capture.cmake  eigen3.cmake  socket_wrapper.cmake
common/absl/include/: absl_strings_match.hpp
common/boost/algorithm/include/: wrapper_boost_algorithm_hex.hpp
common/boost/asio/include/: wrapper_boost_asio.hpp
common/boost/crc/include/: wrapper_boost_crc.hpp
common/boost/filesystem/include/: wrapper_boost_filesystem.hpp
common/boost/program_options/include/: wrapper_boost_program_options.hpp
common/boost/test/include/: wrapper_boost_test_unit_test.hpp
common/boost/uuid/include/: wrapper_boost_uuid_detail_md5.hpp
common/capture/include/: capture.hpp
common/eigen/include/: eigen_dense.hpp
common/socket_wrapper/: socket_wrapper.hpp
common/socket_wrapper/include/: socket_wrapper.hpp
common/test/: capture.hpp
search/: all_0.js  all_5.js  all_6.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  files_1.js  functions_1.js  pages_1.js  pages_3.js  pages_4.js  pages_6.js  pages_9.js  pages_a.js  searchdata.js
